<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/grup_menu"
        android:menuCategory="system">

        <item
            android:id="@+id/menu_acerca"
            android:orderInCategory="1"
            app:showAsAction="never"
            android:visible="false"
            android:title="@string/acerca_de"/>
        <item
            android:id="@+id/menu_informacion"
            android:orderInCategory="2"
            app:showAsAction="never"
            android:visible="false"
            android:title="@string/informacion"/>
        <item
            android:id="@+id/menu_mi_menu"
            android:orderInCategory="3"
            app:showAsAction="never"
            android:visible="false"
            android:title="@string/mi_menu"/>
        <item
            android:id="@+id/menu_session"
            android:orderInCategory="4"
            app:showAsAction="never"
            android:title="@string/cerrar_sesion"/>

    </group>
</menu>