<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/tool_bar_custom"
        layout="@layout/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/login_imagen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:src="@mipmap/icon" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/welcom"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/light_gray"
                android:textStyle="normal|bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/username_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray">

                <AutoCompleteTextView
                    android:id="@+id/email_user"
                    android:layout_width="230dp"
                    android:layout_height="40dp"
                    android:hint="@string/email_user"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/username_text_input_layout_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray">

                <AutoCompleteTextView
                    android:id="@+id/pass_word_user"
                    android:layout_width="230dp"
                    android:layout_height="40dp"
                    android:hint="@string/password_user"
                    android:inputType="textPassword"
                    android:textColor="@color/input_color"
                    android:textColorHint="@color/light_gray" />
            </android.support.design.widget.TextInputLayout>

            <com.andexert.library.RippleView
                android:id="@+id/more_1"
                rv_centered="true"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                app:rv_rippleDuration="@integer/ripple_duration"
                android:gravity="bottom"
                android:layout_marginTop="15dp">

                <Button
                    android:id="@+id/ingresar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/border_button"
                    android:text="Ingresar" />
            </com.andexert.library.RippleView>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ayuda"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/ayuda"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/light_gray" />

            <TextView
                android:id="@+id/terminos_condiciones"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/terminos_condiciones"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/light_gray" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>